[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Button.png" type="Texture" id=1]
[ext_resource path="res://UI/Menu/StartMenu.gd" type="Script" id=2]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.396847
margin_right = -0.396851
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.3265
margin_top = 9.43872
margin_right = 62.6735
margin_bottom = 49.4387
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.4719
margin_top = -63.8648
margin_right = 49.5281
margin_bottom = 76.1352
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingleplayerButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
texture_normal = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/SingleplayerButton"]
margin_left = 11.8751
margin_top = 7.05612
margin_right = 94.8751
margin_bottom = 39.0561
mouse_filter = 1
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 100.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
texture_normal = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/MultiplayerButton"]
margin_left = 15.1787
margin_top = 8.0
margin_right = 95.1787
margin_bottom = 40.0
mouse_filter = 1
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 104.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/OptionsButton"]
margin_left = 24.747
margin_top = 8.70711
margin_right = 80.747
margin_bottom = 40.7071
mouse_filter = 1
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 100.0
margin_bottom = 140.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../StartButton")
texture_normal = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/QuitButton"]
margin_left = 35.0
margin_top = 7.65685
margin_right = 75.0
margin_bottom = 39.6568
mouse_filter = 1
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -1.0
margin_top = 151.0
margin_right = 99.0
margin_bottom = 191.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.1352
margin_top = -14.3368
margin_right = 41.8648
margin_bottom = 25.6632
text = "Discord"

[connection signal="pressed" from="VBoxContainer/SingleplayerButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
